# jsp-shaving1996

./: pyproject.toml
jsp_shaving1996/: __init__.py  main.py
jsp_shaving1996/utils/: backward.py  feasibility.py  forward.py  jsp.py
tests/: test_shaving1996.py
