[tool.poetry]
name = "jsp_shaving1996"
version = "0.1.1"
description = "P, Martin.らの1996年の論文のshavingを実装したもの"
repository = "https://github.com/tkp0331/jsp-shaving1996"
authors = ["鈴木貴大 <merioda.seven.24@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.9"
jsp-exp = "^0.1.31"
jsp-shaving1990 = "^0.1.01"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
